--- a/frontend/src/scss/HorizontalScrollingSection.scss
+++ b/frontend/src/scss/HorizontalScrollingSection.scss
@@ -9,7 +9,7 @@
 
 .horizontal-scrolling {
   position: relative;
-  width: 100vw;
+  width: auto;
   height: 500vh;
   // display: none;
 }
