--- a/frontend/src/scss/PastGlimpses.scss
+++ b/frontend/src/scss/PastGlimpses.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 10vw;
+  overflow: hidden;
 }
 
 .content {
